--- a/lide/jakub-tesar.html
+++ b/lide/jakub-tesar.html
@@ -54,16 +54,16 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-efd2757c.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Event-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-e2b575d8.js">
+		<link rel="modulepreload" href="../_app/immutable/start-9aecd99d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-8d07e911.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-2ce3eee1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-314c292d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-aede7d76.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-ecaacd7a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-0269349b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c1994e6e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-0858da49.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/config-43e89e34.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/config-ed508f72.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-e688278e.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-124e03d6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-19287726.js">
@@ -100,6 +100,9 @@
         <i class="fa-solid fa-xmark fa-2x"></i></button>
       <div class="flex flex-col md:flex-row my-auto w-full"><a href="/" class="flex md:hidden"><img src="/img/logo.svg" class="h-10 m-auto" alt="UTXO 23 Logo"></a>
         <ul class="flex shrink-0 flex-col p-4 mt-4 text-center text-lg md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0"><li class="relative"><a sveltekit:prefetch href="/" target="_self" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Domů<!-- HTML_TAG_START --><!-- HTML_TAG_END --></a>
+                    <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
+                    
+                </li><li class="relative"><a sveltekit:prefetch href="/program" target="_self" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Program<!-- HTML_TAG_START --><!-- HTML_TAG_END --></a>
                     <div class="md:hidden border-b absolute bottom-0 left-1/4 border-custom-green/50 w-1/2"></div>
                     
                 </li><li class="relative"><a sveltekit:prefetch href="https://vstupenky.utxo.cz/23/" target="_blank" class="block py-4 pl-3 pr-4 text-white rounded hover:bg-white/20 md:hover:bg-transparent md:border-0 md:hover:underline md:hover:decoration-custom-green md:hover:decoration-2 md:hover:underline-offset-4 md:p-0 false">Vstupenky<!-- HTML_TAG_START -->&nbsp;<i class="fa-solid fa-up-right-from-square fa-sm opacity-70"></i><!-- HTML_TAG_END --></a>
@@ -201,14 +204,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="f2y8ln">
-			import { start } from "../_app/immutable/start-e2b575d8.js";
+		<script type="module" data-sveltekit-hydrate="1wggq5z">
+			import { start } from "../_app/immutable/start-9aecd99d.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="f2y8ln"]').parentNode,
-				version: "1685106009060",
+				target: document.querySelector('[data-sveltekit-hydrate="1wggq5z"]').parentNode,
+				version: "1685109002580",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
