deploy: 6e33e51ee70a86bb65669eb540306ea19a9f93cd

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-efd2757c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-5d46ab69.js">
+		<link rel="modulepreload" href="./_app/immutable/start-abe72160.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-8d07e911.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-2ce3eee1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-314c292d.js">
@@ -67,7 +67,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-e688278e.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-ac2ab012.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a4fd3a5e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-649ea47c.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-d560edae.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-4d65426e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-0d1c1a4b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/marked.esm-0b02a870.js">
@@ -435,241 +435,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jaroslav-roch-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jaroslav Roch"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jana-kubatova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/matej-curda-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Matěj Čurda"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-duhonsky-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Duhonský"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/rene-darmos-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Rene Darmos"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/marianna-sadecka-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Marianna Sádecká"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stepan-borovka-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Štěpán Borovka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-varga-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Varga"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/filippo-franchini-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Filippo Franchini"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/steve-fau-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Steve Fau"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
 
 
 
@@ -695,33 +461,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-tesar-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Tesař"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
 
 
 
@@ -747,7 +487,280 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lubos-kovarik-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Luboš Kovařík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/steve-fau-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Steve Fau"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/matous-ledvina-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Matouš Ledvina"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/libor-flossler-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Libor Flössler"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/rene-darmos-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Rene Darmos"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/metapavel-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Pavel Říha"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-kamlach-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kamlach"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/marianna-sadecka-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Marianna Sádecká"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/niftyape-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="NiftyApe"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-hubik-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jan Hubík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
 
 
 
@@ -761,19 +774,6 @@
 
 
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
 
 
 
@@ -805,7 +805,7 @@
         </div></div></div></div></section>
 
 <section class="mx-auto py-10 px-6 max-w-auto overflow-hidden"><div class="text-custom-darkpurple lg:mt-10"><div class="text-2xl uppercase font-bold text-center">Partneři</div>
-    <div class="mt-6 text-center">Hlavní sponzoři</div>
+    <div class="mt-6 text-center">Top sponzoři</div>
     <div class="mt-6 flex flex-wrap gap-8 justify-center"><div class="w-32"><a href="https://polkadot.network/" target="_blank" rel="noreferrer"><div class="w-28 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/polkadot-web.svg" class="w-28 shadow-xl rounded-xl m-auto" alt="Polkadot"></div>
 
 
@@ -822,8 +822,8 @@
 </a>
           <div class="text-center text-sm uppercase font-bold mt-3">Polkadot</div>
         </div></div>
-    <div class="mt-6 text-center">Sponzoři</div>
-    <div class="mt-6 flex flex-wrap gap-8 justify-center"><div class="w-32"><a href="https://coinmate.io/cs" target="_blank" rel="noreferrer"><div class="w-20 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/coinmate-web.svg" class="w-20 shadow-xl rounded-xl m-auto" alt="Coinmate"></div>
+    <div class="mt-6 text-center">Hlavní sponzoři</div>
+    <div class="mt-6 flex flex-wrap gap-8 justify-center"><div class="w-32"><a href="https://coinmate.io/cs" target="_blank" rel="noreferrer"><div class="w-28 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/coinmate-web.svg" class="w-28 shadow-xl rounded-xl m-auto" alt="Coinmate"></div>
 
 
 
@@ -837,8 +837,10 @@
 
 
 </a>
-          <div class="text-center text-sm uppercase font-bold pt-2">Coinmate</div>
-        </div><div class="w-32"><a href="https://whalebooks.com/" target="_blank" rel="noreferrer"><div class="w-20 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/whalebooks-web.svg" class="w-20 shadow-xl rounded-xl m-auto" alt="Whalebooks"></div>
+          <div class="text-center text-sm uppercase font-bold mt-3">Coinmate</div>
+        </div></div>
+    <div class="mt-6 text-center">Sponzoři</div>
+    <div class="mt-6 flex flex-wrap gap-8 justify-center"><div class="w-32"><a href="https://whalebooks.com/" target="_blank" rel="noreferrer"><div class="w-20 shadow-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/whalebooks-web.svg" class="w-20 shadow-xl rounded-xl m-auto" alt="Whalebooks"></div>
 
 
 
@@ -1179,14 +1181,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1h3u30y">
-			import { start } from "./_app/immutable/start-5d46ab69.js";
+		<script type="module" data-sveltekit-hydrate="d5eq1g">
+			import { start } from "./_app/immutable/start-abe72160.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1h3u30y"]').parentNode,
-				version: "1685363291628",
+				target: document.querySelector('[data-sveltekit-hydrate="d5eq1g"]').parentNode,
+				version: "1685363936358",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
